# rest-client

./: LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  settings.json  setup.py
docs/: Makefile  api.rst  changelog.rst  conf.py  index.rst  installation.rst  quick_start.rst
docs/_static/: README
purestorage/: __init__.py  purestorage.py
test/: unit_tests.py
